src/pages/quest/quest.module.scss
@import '../../responsive';

.questPage {
  background: url('../../assets/quest-page-background.jpg');
  background-size: cover;
  background-position: center center;
  width: 100vw;
  height: 100vh;
}

.glassBg {
  background: hsl(var(--brand-500), 70%);
  border-radius: 50px;
  border: 3px solid white;
}

.boardWrapper {
  max-width: 1280px;
  margin: auto;
  max-height: 90vh;
  height: 100%;
  display: flex;
  padding: 2em;
  align-items: center;
  justify-content: center;
  gap: 1rem;

  @include mobile {
    display: grid;
    grid-template-rows: repeat(2, 1fr);
    padding: 1em;
    max-height: calc(100vh - 2em);
    max-width: calc(100vw - 2em);
    margin: 0;
    align-items: stretch;
    justify-content: stretch;
  }
}

.questBoard {
  position: relative;
  flex: 1;
  height: calc(100% - 2em);
  padding: 1em;
}

.sideBoardWrapper {
  display: flex;
  align-items: center;
  max-width: 100vw;
  width: 100%;
  justify-content: center;
  background: transparent;
}

.treasureImage {
  width: auto;
  height: 200px;
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
}

.sideBoard {
  position: relative;
  width: 250px;
  height: 100%;

  @include desktop {
    width: 300px;
  }

  @include mobile {
    position: relative;
    width: 100%;
    flex: 1;
    height: auto;

    .treasureImage {
      height: 100px;
    }
  }
}

.sideBoardContent {
  padding-top: 3em;
  padding-left: 1em;
  color: white;
}

.tilesWrapper {
  display: grid;
  z-index: 0;
  grid-template-columns: repeat(5, 1fr);
  justify-content: center;
  width: 100%;
  height: 100%;
  align-items: center;
  justify-items: center;
}

.tile {
  cursor: pointer;
  width: 100%;
  height: auto;
  aspect-ratio: 1/ 1;
  max-width: 120px;
  min-width: 40px;
  transition: all;
  perspective: 1000px;
  z-index: 0;
  border: 3px solid transparent;

  &:hover {
    opacity: 0.8;
    z-index: 100;

    &:not(.unlockedTile) {
      .tileModal {
        opacity: 1;
        pointer-events: all;
      }
    }
  }
}

.tileInner {
  z-index: 0;
  position: relative;
  width: 100%;
  height: 100%;
  transition: transform 0.5s;
  transform-style: preserve-3d;

  @include mobile {
    position: static;
  }
}

.tileModal {
  opacity: 0;
  pointer-events: none;
  position: absolute;
  left: 50%;
  top: 0;
  z-index: 1000;
  transition: 0.5s all;

  .tileModalClose {
    display: none;
  }

  .tileModalContent {
    position: relative;
    width: 300px;
    height: 180px;
  }

  @include mobile {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;

    .tileModalClose {
      display: block;
      position: absolute;
      top: 1em;
      right: 1em;
      color: white;
      font-size: 2rem;
      width: 1.5em;
      height: 1.5em;
      z-index: 10;
    }

    .tileModalBackdrop {
      position: absolute;
      width: 100%;
      height: 100%;
      z-index: 10;
      background: rgba(0,0,0,.9);
      backdrop-filter: blur(10px);
    }

    .tileModalContent {
      z-index: 1000;
    }
  }
}

.lockedImage,
.unlockedImage {
  width: 100%;
  height: 100%;
  object-fit: contain;
  position: absolute;
  backface-visibility: hidden;
}

.lockedImage {
}

.unlockedImage {
  transform: rotateY(180deg);
}

.selectedTile {
  border: 3px solid hsl(var(--brand-200));
  border-radius: 1rem;

  .tileInner {
    transform: rotateY(180deg);
  }

  &:not(.unlockedTile) {
    .tileInner > img {
      filter: grayscale(100%);
    }
  }
}

.unlockedTile {
  &.notCollected {
    &:hover {
      transition: 0.5s filter;
      filter: drop-shadow(0 0 30px #fff);
    }
  }
  .tileInner {
    animation: rotateUnlocked 1s;
    animation-fill-mode: forwards;
    animation-delay: 1s;
  }
}

@keyframes rotateUnlocked {
  0% {
    transform: rotateY(0deg);
  }
  100% {
    transform: rotateY(180deg);
  }
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes shootTop {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-100vh);
  }
}

